# datajoint-link

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  computational.env  docker-compose.yml  experimental.env  jupyter_notebook_config.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-runner-compose.yml
.github/workflows/: black.yml  build.yml  ci.yml  docker-image.yml  lint.yml  mypy.yml  pypi.yml  test.yml
dj_link/: __init__.py  base.py  custom_types.py  docker.py  globals.py  schemas.py  types.py
dj_link/adapters/: __init__.py  controller.py  gateway.py  identification.py  present.py  presenter.py
dj_link/adapters/datajoint/: __init__.py  abstract_facade.py  controller.py  facade.py  gateway.py  identification.py  presenter.py
dj_link/domain/: link.py  state.py
dj_link/entities/: abstract_gateway.py  command.py  contents.py  custom_types.py  flag_manager.py  link.py  repository.py  state.py  transaction_manager.py
dj_link/frameworks/: __init__.py  config.py  custom_types.py  dj_helpers.py  facade.py  factory.py  link.py  log.py  mixin.py  sequence.py
dj_link/frameworks/datajoint/: __init__.py  config.py  dj_helpers.py  facade.py  factory.py  file.py  link.py  mixin.py  printer.py
dj_link/infrastructure/: __init__.py  link.py  mixin.py
dj_link/service/: gateway.py  io.py  services.py  use_cases.py
dj_link/use_cases/: __init__.py  base.py  delete.py  gateway.py  pull.py  refresh.py  use_cases.py
docs/: entity_states.md
entrypoints/: profile_entrypoint.sh  pytest_entrypoint.sh
link/: __init__.py  base.py  main.py  schemas.py  types.py
link/adapters/: controller.py  dj_gateway.py  facade.py  gateway.py  identification.py  link.py  local_table.py  present.py  progress.py
link/adapters/datajoint/: __init__.py  abstract_facade.py  controller.py  gateway.py  identification.py  link.py  local_table.py  presenter.py  proxy.py
link/domain/: __init__.py  commands.py  custom_types.py  events.py  link.py  state.py
link/entities/: abstract_gateway.py  address.py  configuration.py  contents.py  data_storage.py  domain.py  entity.py  flag_manager.py  gateway.py  link.py  local.py  outbound.py  repository.py  representation.py  source.py  transaction_manager.py
link/entities_old/: entity.py  local.py
link/frameworks/datajoint/: dj_helpers.py  facade.py  factory.py  file.py  link.py  mixin.py  printer.py
link/infrastructure/: config.py  dj_helpers.py  facade.py  factory.py  link.py  log.py  mixin.py  progress.py
link/service/: ensure.py  gateway.py  handlers.py  io.py  messagebus.py  progress.py  services.py  uow.py
link/use_cases/: __init__.py  abstract_gateway.py  base.py  delete.py  pull.py  refresh.py
notebooks/: computational.ipynb  experimental.ipynb  experimental_outbound.ipynb
profiling/: plot_pull_times.py  profile_pull.py
src/: link.py  link_old.py
stubs/datajoint/: __init__.pyi  utils.pyi
tests/: assignments.py  conftest.py
tests/docker/: test_docker.py  test_runner.py
tests/functional/: conftest.py  test_creation.py  test_database.py  test_deleting.py  test_pulling.py  test_source_property.py
tests/functional/test_delete/: test_delete.py
tests/functional/test_pulling/: conftest.py  test_pulling.py  test_pulling_with_external.py  test_pulling_with_part.py
tests/functional/test_pulling/test_pulling_with_part/: conftest.py  test_pulling_with_part.py  test_pulling_with_part_and_external.py
tests/integration/: conftest.py  gateway.py  test_datajoint_persistence.py  test_delete_use_case.py  test_gateway.py  test_integration_delete_use_case.py  test_integration_pull_use_case.py  test_integration_refresh_use_case.py  test_pull.py  test_pull_use_case.py  test_refresh_use_case.py  test_services.py  test_uow.py  test_use_cases.py
tests/unit/: conftest.py  test_base.py  test_docker.py  test_schemas.py
tests/unit/adapters/: conftest.py  test_dj_gateway.py  test_gateway.py  test_local_table.py
tests/unit/adapters/datajoint/: test_adapters_init.py  test_controller.py  test_gateway.py  test_identification.py  test_init.py  test_link_controller.py  test_local_table.py  test_local_table_controller.py  test_presenter.py
tests/unit/adapters/dj_gateway/: conftest.py  test_local_dj_gateway.py  test_outbound_dj_gateway.py  test_source_dj_gateway.py
tests/unit/adapters/link/: test_controller.py
tests/unit/domain/: test_link.py  test_state.py  types.py
tests/unit/entities/: assignments.py  conftest.py  test_address.py  test_configuration.py  test_contents.py  test_domain.py  test_entity.py  test_flag_manager.py  test_link.py  test_outbound.py  test_repository.py  test_represent.py  test_source.py  test_state.py  test_transaction_manager.py
tests/unit/entities/repository/: conftest.py  test_read_only_repository.py  test_repository.py
tests/unit/entities/repository_subclasses/: conftest.py  test_local.py  test_outbound.py  test_source.py
tests/unit/entities_old/: conftest.py  test_data_storage.py  test_entity.py  test_link.py
tests/unit/entities_old/repository/: test_non_source_repository.py  test_source_repository.py
tests/unit/entities_old/repository_subclasses/: conftest.py  test_outbound.py
tests/unit/frameworks/datajoint/: test_dj_helpers.py  test_facade.py  test_factory.py  test_file.py  test_frameworks_init.py  test_link.py  test_mixin.py  test_printer.py
tests/unit/infrastructure/datajoint/: test_dj_helpers.py
tests/unit/use_cases/: conftest.py  test_all_use_cases.py  test_base.py  test_base_use_case.py  test_delete.py  test_delete_response_model.py  test_delete_use_case.py  test_init.py  test_pull.py  test_pull_response_model.py  test_pull_use_case.py  test_refresh.py  test_refresh_response_model.py  test_refresh_use_case.py  test_use_cases_init.py
tests/unit/use_cases/request_models/: test_all_request_models.py
tests/unit/use_cases/response_models/: conftest.py  test_all_response_models.py  test_delete_response_model.py  test_pull_response_model.py  test_refresh_response_model.py
