[project]
name = "datajoint-link"
version = {use_scm = true}
description = "A tool for linking two DataJoint tables located on different database servers"
readme = "README.md"
authors = [
    {name = "Christoph Blessing", email = "33834216+cblessing24@users.noreply.github.com"},
]
dependencies = ["datajoint >= 0.12, < 0.13"]
dev-dependencies = [
    "pytest~=6.2",
    "pytest-sugar~=0.9",
    "pytest-cov~=2.11",
    "docker~=4.4",
    "pymysql~=1.0",
    "minio~=7.0",
    "black~=20.8b1",
    "pylint~=2.7",
    "flake8~=3.8",
    "isort~=5.7",
    "mypy~=0.812",
    "flake8-docstrings~=1.6",
]
requires-python = ">=3.8"
dynamic = ["classifiers", "version"]
license = {text = "GNU GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Database",
]

[project.urls]
homepage = "https://github.com/sinzlab/link"

[project.optional-dependencies]
profiling = [
    "gprof2dot~=2021.2",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pylint.master]
max-line-length = 120

[tool.pylint.messages_control]
# duplicate-code can't be disabled on a per instance basis (https://github.com/PyCQA/pylint/issues/214)
disable = ["cyclic-import", "duplicate-code", "logging-fstring-interpolation"]

[tool.coverage.run]
branch = true
source = ["dj_link"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
