[metadata]
name = datajoint-link
version = 0.0.0
url = https://github.com/sinzlab/link
author = Christoph Blessing
author_email = chris.blessing@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Topic :: Database
license_file = LICENSE.txt
description = A tool for linking two DataJoint tables located on different database servers
long_description = file : README.txt
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires=
    datajoint